# tabler

./: .gitignore  AUTHORS  Makefile.am  configure.ac
data/: Makefile.am  tabler.desktop  tabler.desktop.in  tabler.desktop.in.in
icons/: Makefile.am
mime/: Makefile.am  tabler.xml.in
po/: POTFILES.in  sv.po
src/: .gitignore  Makefile.am  application.vala  appmenu.ui  arrangement-parser.vala  arrangement.vala  config.vapi  file-utils.vala  gender.vala  guest-parser.vala  guest.vala  long-table-parser.vala  long-table.vala  main-window.ui  main-window.vala  relation.vala  relations-editor.vala  room-parser.vala  room.vala  round-table-parser.vala  round-table.vala  table-parser.vala  table.vala  tabler.gresource.xml  tabler.ui  tabler.vala  xml-serializable.vala
